--- a/src/main/resources/assets/maidillager/lang/en_us.json
+++ b/src/main/resources/assets/maidillager/lang/en_us.json
@@ -1,5 +1,8 @@
 {
   "title.maidillager.config": "MaidIllager Config",
+  "title.maidillager.viewconfig": "MaidIllager Appearance Settings",
+  "maidillager.modconfiggui.viewconfigbtn": "Appearance Settings",
+  "maidillager.modconfiggui.exitbtn": "Close",
   "category.maidillager.general": "General",
   "option.maidillager.umulike": "Is texture like UMU Little Maid?"
 }
