文言を修正。

--- a/src/main/resources/assets/maidillager/lang/en_us.json
+++ b/src/main/resources/assets/maidillager/lang/en_us.json
@@ -4,5 +4,5 @@
   "maidillager.modconfiggui.viewconfigbtn": "Appearance Settings",
   "maidillager.modconfiggui.exitbtn": "Close",
   "category.maidillager.general": "General",
-  "option.maidillager.umulike": "Is texture like UMU Little Maid? (Deprecation)"
+  "option.maidillager.umulike": "Is texture like UMU Little Maid?"
 }
