--- a/src/main/resources/assets/maidillager/lang/ja_jp.json
+++ b/src/main/resources/assets/maidillager/lang/ja_jp.json
@@ -4,5 +4,5 @@
   "maidillager.modconfiggui.viewconfigbtn": "外観設定",
   "maidillager.modconfiggui.exitbtn": "閉じる",
   "category.maidillager.general": "一般",
-  "option.maidillager.umulike": "テクスチャを UMU Little Maid 風にする? (非推奨)"
+  "option.maidillager.umulike": "テクスチャを UMU Little Maid 風にする?"
 }
