--- a/src/main/resources/assets/maidillager/lang/ja_jp.json
+++ b/src/main/resources/assets/maidillager/lang/ja_jp.json
@@ -1,8 +1,8 @@
 {
   "title.maidillager.config": "MaidIllager 設定",
-  "title.maidillager.viewconfig": "MaidIllager 外観設定",
-  "maidillager.modconfiggui.viewconfigbtn": "外観設定",
-  "maidillager.modconfiggui.exitbtn": "閉じる",
+  "title.maidillager.appearanceconfig": "MaidIllager 外観設定",
+  "maidillager.modconfiggui.appearanceconfigbtn": "外観設定",
+  "maidillager.modconfiggui.closebtn": "閉じる",
   "category.maidillager.general": "一般",
   "option.maidillager.umulike": "テクスチャを UMU Little Maid 風にする?"
 }
